[gd_scene load_steps=11 format=3 uid="uid://1gaysb31vf22"]

[ext_resource type="Script" uid="uid://0tgpectrnofq" path="res://Scripts/player.gd" id="1_6t5aa"]
[ext_resource type="Texture2D" uid="uid://bksrxausw1u3r" path="res://Assets/sprites/gun_sprites.png" id="1_v0iea"]
[ext_resource type="AudioStream" uid="uid://drhu32fgxjrao" path="res://Assets/sfx/revolver_shot1.wav" id="2_cvnsp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f60y1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0iea"]
atlas = ExtResource("1_v0iea")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_6t5aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0iea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6t5aa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_f60y1")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Gun_Hold" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Gun" type="AnimatedSprite2D" parent="CanvasLayer/Gun_Hold"]
position = Vector2(184.5, -69.5)
scale = Vector2(0.427734, 0.427734)
sprite_frames = SubResource("SpriteFrames_6t5aa")
animation = &"shoot"
autoplay = "idle"
frame = 3
frame_progress = 0.743451

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Death_Panel" type="Panel" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -67.0
offset_right = 181.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouDIED_Label" type="Label" parent="CanvasLayer/DeathScreen/Death_Panel"]
layout_mode = 0
offset_left = 143.0
offset_top = 14.0
offset_right = 217.0
offset_bottom = 37.0
text = "You Died!"

[node name="Restart_Button" type="Button" parent="CanvasLayer/DeathScreen/Death_Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 84.0
offset_right = 211.0
offset_bottom = 115.0
text = "Restart"

[node name="Shoot_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cvnsp")
bus = &"SFX"
